[package]
name = "voqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.2", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
wgpu = "0.14.0"
winit = "0.27.5"
